--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,7 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:2.3.2'
         classpath 'com.novoda:bintray-release:0.3.4'
+        classpath 'com.github.dcendents:android-maven-gradle-plugin:1.5'
         //classpath ('com.tencent.tinker:tinker-patch-gradle-plugin:1.8.1')
         //classpath 'com.neenbedankt.gradle.plugins:android-apt:1.4'//viewinject-sample model
         // NOTE: Do not place your application dependencies here; they belong
